pacific: mon: avoid exception when setting require-osd-release more than 2 versions up.

Request for additional confirmation instead.

Fixes: https://tracker.ceph.com/issues/58156

Signed-off-by: RaminNietzsche <Ramin.Najarbashi@gmail.com>